[package]
name = "redis-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes="*"
bincode="*"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.23.0", features = ["full"] } # async networking
anyhow = "1.0.59"  
log="*"
tokio-util = {version="*",features=["codec"]}